--- a/config.org
+++ b/config.org
@@ -154,36 +154,50 @@ appropriately.
 :ID:       19a0f630-6201-477a-9de0-b3ce6a74d31d
 :END:
 #+BEGIN_SRC emacs-lisp :tangle yes
-(setq org-capture-templates
-      `(("t" "todo" entry (file ,(concat org-directory "refile.org"))
-         "* TODO %?\n%U\n%a\n" :clock-in t :clock-resume t)
+(setq +org-capture-todo-file "refile.org")
+(unless (boundp 'jm/org-capture-templates)
+  (setq jm/org-capture-templates (list)))
+(add-to-list 'jm/org-capture-templates
+             `("t" "todo" entry (file ,(concat org-directory "refile.org"))
+               "* TODO %?\n%U\n%a\n" :clock-in t :clock-resume t)
+             'append)
 
-        ("d" "Daily" entry (file+datetree ,(concat org-directory "diary.org"))
-         (file ,(concat doom-private-dir "templates/daily.org_template")))
+(add-to-list 'jm/org-capture-templates
+             `("d" "Daily" entry (file+datetree ,(concat org-directory "diary.org"))
+               (file ,(concat doom-private-dir "templates/daily.org_template")))
+             'append)
 
-        ("r" "respond" entry (file ,(concat org-directory "refile.org"))
-         "* NEXT Respond to %:from on %:subject\nSCHEDULED: %t\n%U\n%a\n" :clock-in t :clock-resume t :immediate-finish t)
+(add-to-list 'jm/org-capture-templates
+             `("r" "respond" entry (file ,(concat org-directory "refile.org"))
+               "* NEXT Respond to %:from on %:subject\nSCHEDULED: %t\n%U\n%a\n" :clock-in t :clock-resume t :immediate-finish t)
+             'append)
 
-        ("n" "note" entry (file ,(concat org-directory "refile.org"))
-         "* %? :NOTE:\n%U\n%a\n" :clock-in t :clock-resume t)
+(add-to-list 'jm/org-capture-templates
+             `("n" "note" entry (file ,(concat org-directory "refile.org"))
+               "* %? :NOTE:\n%U\n%a\n" :clock-in t :clock-resume t)
+             'append)
 
-        ("p" "org-protocol" entry (file ,(concat org-directory "refile.org"))
-         "* TODO review %^{Title}\nSource:%u, %c\n" :immediate-finish t)
+(add-to-list 'jm/org-capture-templates
+             `("p" "org-protocol" entry (file ,(concat org-directory "refile.org"))
+               "* TODO review %^{Title}\nSource:%u, %c\n" :immediate-finish t)
+             'append)
 
-        ("L" "org-protocol link" entry (file ,(concat org-directory "refile.org"))
-         "* TODO %? [[%:link][%:description]] \nCaptured on: %U" :immediate-finish t)
+(add-to-list 'jm/org-capture-templates
+             `("L" "org-protocol link" entry (file ,(concat org-directory "refile.org"))
+               "* TODO %? [[%:link][%:description]] \nCaptured on: %U" :immediate-finish t)
+             'append)
 
-        ("m" "Meeting" entry (file+datetree ,(concat org-directory "diary.org"))
-         "* MEETING with %? :MEETING:\n%U" :clock-in t :clock-resume t)
+(add-to-list 'jm/org-capture-templates
+             `("m" "Meeting" entry (file+datetree ,(concat org-directory "diary.org"))
+               "* MEETING with %? :MEETING:\n%U" :clock-in t :clock-resume t)
+             'append)
 
-        ("w" "Review: Weekly Review" entry (file+olp+datetree ,(concat org-directory "reviews.org"))
-         (file ,(concat doom-private-dir "templates/weeklyreviewtemplate.org")))
+(add-to-list 'jm/org-capture-templates
+             `("w" "Review: Weekly Review" entry (file+olp+datetree ,(concat org-directory "reviews.org"))
+               (file ,(concat doom-private-dir "templates/weeklyreviewtemplate.org")))
+             'append)
 
-        ("j" "Journal" entry (file+datetree ,(concat org-directory "diary.org"))
-         "* %?\n%U\n" :clock-in t :clock-resume t)
-
-        ("B" "Brain" plain (function org-brain-goto-end)
-         "* %i%?" :empty-lines 1)))
+(setq org-capture-templates jm/org-capture-templates)
 
 #+END_SRC
 
